SERVER-17499 Don't set owned RU if creating DBDirectClient agg cursor